# electrochromic_characterization

./: .gitignore  LICENSE  Makefile  README.md  params.yaml  pyproject.toml
scripts/: create_env.sh  dvc_add.sh
src/: compare_curves.py  experiment.py  lego_app_v4.py  opt_gamma.py  plots.py  report.py
src/utils/: io.py
