[project]
name = "electrochromism"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.3",
    "seaborn==0.13.2",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "opencv-python==4.10.0.84",
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    "dash>=3.3.0",
    "plotly>=6.4.0",
    "dash-bootstrap-components>=2.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "dvc==3.56.0"
]

########################## Tool Configuration ##########################
[tool.ruff]
line-length = 100
 
[tool.ruff.lint]
select = [
    "N",    # pep8-naming
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "PD",   # pandas vet
    "NPY",  # NumPy-specific rules
]
ignore = [
    "C901",  # Too complex 
    "PD901", # Avoid using df for DataFrames
]
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["."]

########################## Build Configuration ##########################
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
